update a few details
made changes to  the degree:, uni:, year:, and summary: lines.

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper Nanodegree  from Trump University
+  uni: Audacity of hope
+  year: June, 2014 &mdash; January, 2025
   # awards:
-  # summary:
+  summary:I took a couple of gaps to found 2 startups which were eventually aquired by larger companies, I went back to complete my degree out of respect for my grandma's wishes
